Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -416,7 +416,7 @@
     }
    ],
    "source": [
-    "cities[7].update({'City':'Pyeon'}\n",
+    "cities[7].update({'City':'PyeongChang'}\n",
     "cities[7]['City'] # 'PyeongChang'"
    ]
   },
