Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -418,7 +418,7 @@
     }
    ],
    "source": [
-    "pyeongchang_values = cities[7].values()\n",
+    "pyeongchang_values = .values()\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 44, 1464]"
    ]
